--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Run Buddy 2</title>
-    </head>
+<!--navigation-->
+<header>
+    <h1> RUN BUDDY<h1>
+</header>
 
-    <body>
-        <h2>RUN BUDDY</h2>
-        What We Do What You Do Your Trainers Reach Out
-        
-    </body>
-    
-    </html>
+<!--hero/jumbotron-->
+<section>
+</section>
+
+<!--"what you do" section-->
+<section> 
+    <h2>What You Do</h2>
+</section>
+
+<!--"meet the Trainers" section-->
+<section>
+    <h2> Meet The Trainers</h2>
+</section>
+
+<!--"reach out" section-->
+<section>
+    <h2>Reach Out </h2>
+</section>
+
+<!-- Footer -->
+<footer>
+    <h2> ❤️ Made with love by Run Buddy. </h2>
+</footer>
+
