css styling commit

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!--navigation-->
 <header>
-   <h1>
-       <a href="/">RUN BUDDY</a>
-   </h1>
-   <nav>
-       <!--Unordered list element-->
-       <ul> <!--List item element-->        
+    
+
+    <h1>
+        <a href="/">RUN BUDDY</a>
+    </h1>
+    <nav>
+        <!--Unordered list element-->
+        <ul> <!--List item element-->        
             <li> <!-- Anchor element --> 
-               <a href="#what-we-do">What we Do </a> 
+            <a href="#what-we-do">What we Do </a> 
             </li>
             <li>
                 <a href="#what-you-do">What You Do</a>
@@ -20,7 +22,9 @@
             </li>
         
         </ul>
-   </nav>
+    </nav>
+    <link rel="stylesheet" href="./assets/css/style.css" /> 
+
 </header>
 
 <!--hero/jumbotron-->
