--- a/index.html
+++ b/index.html
@@ -49,5 +49,10 @@
 <!-- Footer -->
 <footer>
     <h2> ❤️ Made with love by Run Buddy. </h2>
+    <div><a href="#">Read Our Private Policy</a><br />
+        &copy; 2019 Run Buddy, INC
+    </div>
+        
+    
 </footer>
 
