style what we do section

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 <!--end hero-->
 
 <!--"what we do"-->
-<section id="what-we-do">
+<section id="what-we-do" class="intro">
     <h2>What We Do</h2>
     <p>
-        butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX
+        butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam fugit illum quibusdam, harum quas nesciunt autem. Earum magnam necessitatibus voluptatem vitae officiis illo quisquam reiciendis. Dolorem dignissimos suscipit eos impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque exercitationem, voluptatem sed necessitatibus odio dicta dolor nam, ad doloremque tenetur consectetur asperiores omnis explicabo cupiditate id maiores fugit facilis ullam.
     </p>
 </section>
 
