meet the trainers section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="#what-you-do">What You Do</a>
             </li>
             <li>
-                <a href="#your trainers">Your Trainers</a>
+                <a href="#your-trainers">Your Trainers</a>
             </li>
             <li>
                 <a href="#reach-out">Reach Out</a>
@@ -106,8 +106,56 @@
 </section>
 
 <!--"meet the Trainers" section-->
-<section>
-    <h2> Meet The Trainers</h2>
+
+<section id="your-trainers" class="trainers" >
+    <h2 class="section-title primary-border" >
+        Meet The Trainers
+    </h2>
+
+    <!--first trainer bio-->
+    <article class="trainer">
+        <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+        <div class="trainer-bio text-left"> 
+            <h3>Arron Stephens</h3>
+            <h4>Speed / Strength</h4>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis officiis illo maiores qui, iure sapiente recusandae dolorem praesentium ipsa reprehenderit assumenda. Dignissimos temporibus voluptatibus quasi, itaque blanditiis voluptatum soluta ratione?Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis debitis officiis excepturi amet veritatis modi similique error illo, quis mollitia cupiditate harum magni, labore repellat repudiandae, iusto repellendus. Quidem, ullam.
+
+            </p>
+        </div>
+
+    </article>
+
+    <!--second trainer bio-->
+    <article class="trainer">
+
+        <Div class="trainer-bio text-right"> 
+            <h3> Joanna Gill</h3>
+            <h4>Endurance</h4>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae odit laborum quasi amet. In ex voluptatum, architecto provident consectetur porro possimus velit iusto? Perferendis nulla soluta laudantium laborum a non?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi voluptatum temporibus repudiandae aperiam esse vitae! Illum consequuntur fugiat iure quasi, velit dignissimos libero accusantium commodi nemo, esse accusamus minima vitae.
+
+            </p>
+
+        </Div>
+
+        <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
+        
+    </article>
+
+    <!--third trainer bio-->
+    <article class="trainer">
+        <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights">
+        <div class="trainer-bio text-left">
+            <h3>Harry "the Headband" Smith</h3>
+            <h4>Strength</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nihil incidunt quam tempora perspiciatis at beatae odio accusantium repellendus dolor. At voluptas iste ipsa tenetur omnis quaerat doloremque minus veniam?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere eligendi in dicta! Doloribus pariatur iure modi tenetur autem ratione eaque atque sapiente voluptatum accusamus! Esse dolores perspiciatis qui est magni.</p>
+
+
+        </div>
+
+    </article>
+
 </section>
 
 <!--"reach out" section-->
