add content hero, replace image

--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
 
         </form>
     </div>
+    <div class="hero-habits">
+        <h2> Start Building <br> Habits.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nihil sint doloremque, soluta, at alias totam maiores ullam, quo dolores corrupti non rem? Tenetur voluptatum, harum corporis beatae debitis ex?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam assumenda enim velit tempora provident quod facilis soluta dicta dolores molestias voluptates nihil, voluptatem rerum, nostrum earum perferendis excepturi ipsa maxime.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore libero totam consequuntur in dolor temporibus optio, amet blanditiis suscipit laboriosam necessitatibus expedita facilis cumque ipsa eveniet omnis ipsam dolorem mollitia.
+         
+        </p>
+
+    </div>
+
 </section>
 <!--end hero-->
 
