--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </form>
     </div>
     <div class="hero-habits">
-        <h2> Start Building <br> Habits.</h2>
+        <h2 class="start-building"> Start Building <br> Habits.</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nihil sint doloremque, soluta, at alias totam maiores ullam, quo dolores corrupti non rem? Tenetur voluptatum, harum corporis beatae debitis ex?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam assumenda enim velit tempora provident quod facilis soluta dicta dolores molestias voluptates nihil, voluptatem rerum, nostrum earum perferendis excepturi ipsa maxime.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore libero totam consequuntur in dolor temporibus optio, amet blanditiis suscipit laboriosam necessitatibus expedita facilis cumque ipsa eveniet omnis ipsam dolorem mollitia.
@@ -177,6 +177,22 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4044.2970998254723!2d-96.68440659306623!3d32.84319127815769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864ea13d2461e57b%3A0x7331ebc8ce87f1f3!2s1611%20Centerville%20Rd%2C%20Dallas%2C%20TX%2075228!5e0!3m2!1sen!2sus!4v1645653031417!5m2!1sen!2sus" 
             style= "border:0;" allowfullscreen="" loading="lazy">
         </iframe>
+
+        <div class="contact-form">
+            <h3> Contact Us</h3>
+            <form>
+                <label for="contact-name">Your Name</label>
+                <input type="text" id="contact-name" placeholder="Your Name"/>
+
+                <label for="contact-message">Message </label> 
+                <textarea id="contact-message" placeholder="Message"></textarea>
+
+                <button type="submit">Submit</button>
+            </form>
+        
+
+        </div>
+
         <div>
             <h3>Run Buddy</h3>
             <p>
