--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
         </form>
     </div>
-    <div class="hero-habits">
-        <h2 class="start-building"> Start Building <br> Habits.</h2>
+    <div class="hero-cta">
+        <h2> Start Building <br> Habits.</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nihil sint doloremque, soluta, at alias totam maiores ullam, quo dolores corrupti non rem? Tenetur voluptatum, harum corporis beatae debitis ex?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam assumenda enim velit tempora provident quod facilis soluta dicta dolores molestias voluptates nihil, voluptatem rerum, nostrum earum perferendis excepturi ipsa maxime.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore libero totam consequuntur in dolor temporibus optio, amet blanditiis suscipit laboriosam necessitatibus expedita facilis cumque ipsa eveniet omnis ipsam dolorem mollitia.
@@ -78,7 +78,7 @@
 <!--end hero-->
 
 <!--"what we do"-->
-<section id="what-we-do" class="intro">
+<section id="what-we-do" class="flex-row">
     <h2 class="section-title primary-border">What We Do </h2>
     <p>
         butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam fugit illum quibusdam, harum quas nesciunt autem. Earum magnam necessitatibus voluptatem vitae officiis illo quisquam reiciendis. Dolorem dignissimos suscipit eos impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque exercitationem, voluptatem sed necessitatibus odio dicta dolor nam, ad doloremque tenetur consectetur asperiores omnis explicabo cupiditate id maiores fugit facilis ullam.
@@ -86,10 +86,10 @@
 </section>
 
 <!--"what you do" section-->
-<section id="what-you-do" class="steps"> 
+<section id="what-you-do" class="flex-row"> 
     <h2 class="section-title secondary-border">What You Do</h2>
 
-    <div>
+    <div class="flex-row">
         <!--insert this img element-->
         <img src="./assets/images/step-1.svg" alt="" />
         <h3>Step1: <span>Fill Out the Form Above</span></h3>
@@ -177,22 +177,6 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4044.2970998254723!2d-96.68440659306623!3d32.84319127815769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864ea13d2461e57b%3A0x7331ebc8ce87f1f3!2s1611%20Centerville%20Rd%2C%20Dallas%2C%20TX%2075228!5e0!3m2!1sen!2sus!4v1645653031417!5m2!1sen!2sus" 
             style= "border:0;" allowfullscreen="" loading="lazy">
         </iframe>
-
-        <div class="contact-form">
-            <h3> Contact Us</h3>
-            <form>
-                <label for="contact-name">Your Name</label>
-                <input type="text" id="contact-name" placeholder="Your Name"/>
-
-                <label for="contact-message">Message </label> 
-                <textarea id="contact-message" placeholder="Message"></textarea>
-
-                <button type="submit">Submit</button>
-            </form>
-        
-
-        </div>
-
         <div>
             <h3>Run Buddy</h3>
             <p>
