--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
     </nav>
     <link rel="stylesheet" href="./assets/css/style.css" /> 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </header>
 
 <!--hero/jumbotron-->
